# eirt2025

./: .gitignore  README.md  README_PointPainting.md  check_kitti.py  context.txt  main.py  pyproject.toml
notebooks/: WAHAMA.ipynb  depth_map.ipynb  pixel_segmentation_test.ipynb  pointpainting_demo.ipynb  report_figures.ipynb  sbdx.ipynb  segmentation_sandbox.ipynb
outputs/: metrics_000000.txt  metrics_000100.txt  painted_pointcloud_000000.npy  painted_pointcloud_000100.npy
outputs/kitti_batch/batch/: painted_000000.npy  painted_000001.npy  (+1 more)
outputs/kitti_demo/: metrics_000000.txt  painted_pointcloud_000000.npy
outputs/pointpainting_demo/: metrics_000000.txt  painted_pointcloud_000000.npy
scripts/: inference_segmentation.py  pixel_seg_test.py  pixelseg.bash  pointpainting_demo.py  pointpainting_demo_fixed.py  show_all_objects.py  test_pointpainting.py  test_segmentation.py  train_segmentation.py  view_dataset.bash  view_dataset.py  visualize.bash  visualize_painted_pointcloud.py  visualize_segmentation.py
src/blenderPipeline/: .gitignore  ObjectLoader.py  background.py  backgroundBlend.py  backgroundLoader.py  batch copy.py  batch.py  camera.py  light.py  object.py  objectLoader.py
src/depth_maps/: depth_to_point_cloud.py  pyproject.toml
src/module_template/: __init__.py
src/pixelseg/: README.md  __init__.py  dataset.py  model.py  predictor.py  trainer.py
src/pixelsegmentation/: README.md  __init__.py  segmentation.py  utils.py
src/pointpainting/: __init__.py  config.py  core.py  data_loader.py  projection.py  segmentation.py  utils.py
(+3 files in other folders)
